Bug 399999 - Notes tooltips do not use the correct encoding
Summary: Notes tooltips do not use the correct encoding
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: notes (other bugs)
Version First Reported In: 5.7.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-18 17:11 UTC by Barade
Modified: 2018-10-19 05:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Barade 2018-10-18 17:11:05 UTC
SUMMARY
When moving the cursor on a note in the overview, the tooltip does not use the correct encoding.
A German Umlaut like ä or ß is not properly.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2018-10-19 05:08:48 UTC
which tooltip ?
Could you provide a screenshot please ?

thanks
Comment 2 Laurent Montel 2018-10-19 05:22:13 UTC
Git commit 04cde5088d99dfe146d2a5e6a527a28d3225a18d by Laurent Montel.
Committed on 19/10/2018 at 05:21.
Pushed by mlaurent into branch 'Applications/18.08'.

Fix Bug 399999 - Notes tooltips do not use the correct encoding

FIXED-IN: 5.9.3

M  +1    -1    noteshared/src/noteutils.cpp

https://commits.kde.org/knotes/04cde5088d99dfe146d2a5e6a527a28d3225a18d