Fix Bug 399999 - Notes tooltips do not use the correct encoding

FIXED-IN: 5.9.3
BUG: 399999